Update Unique Authors and Add Additional Potential Data Issues

--- a/restaurant.ipynb
+++ b/restaurant.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "8885e6a0-99fa-4555-bb7c-0e4a5a593204",
    "metadata": {},
    "outputs": [
@@ -26,17 +26,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting textblob\n",
-      "  Downloading textblob-0.18.0.post0-py3-none-any.whl.metadata (4.5 kB)\n",
-      "Requirement already satisfied: nltk>=3.8 in /Users/susannahsu/micromamba/envs/cs109b/lib/python3.11/site-packages (from textblob) (3.8.1)\n",
-      "Requirement already satisfied: click in /Users/susannahsu/micromamba/envs/cs109b/lib/python3.11/site-packages (from nltk>=3.8->textblob) (8.1.7)\n",
-      "Requirement already satisfied: joblib in /Users/susannahsu/micromamba/envs/cs109b/lib/python3.11/site-packages (from nltk>=3.8->textblob) (1.3.2)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in /Users/susannahsu/micromamba/envs/cs109b/lib/python3.11/site-packages (from nltk>=3.8->textblob) (2023.12.25)\n",
-      "Requirement already satisfied: tqdm in /Users/susannahsu/micromamba/envs/cs109b/lib/python3.11/site-packages (from nltk>=3.8->textblob) (4.66.1)\n",
-      "Downloading textblob-0.18.0.post0-py3-none-any.whl (626 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m626.3/626.3 kB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: textblob\n",
-      "Successfully installed textblob-0.18.0.post0\n"
+      "Requirement already satisfied: textblob in /Users/suahnam/micromamba/envs/cs109b/lib/python3.11/site-packages (0.18.0.post0)\n",
+      "Requirement already satisfied: nltk>=3.8 in /Users/suahnam/micromamba/envs/cs109b/lib/python3.11/site-packages (from textblob) (3.8.1)\n",
+      "Requirement already satisfied: click in /Users/suahnam/micromamba/envs/cs109b/lib/python3.11/site-packages (from nltk>=3.8->textblob) (8.1.7)\n",
+      "Requirement already satisfied: joblib in /Users/suahnam/micromamba/envs/cs109b/lib/python3.11/site-packages (from nltk>=3.8->textblob) (1.3.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /Users/suahnam/micromamba/envs/cs109b/lib/python3.11/site-packages (from nltk>=3.8->textblob) (2023.12.25)\n",
+      "Requirement already satisfied: tqdm in /Users/suahnam/micromamba/envs/cs109b/lib/python3.11/site-packages (from nltk>=3.8->textblob) (4.66.1)\n"
      ]
     }
    ],
@@ -46,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "ee05a70e-7a43-4bb7-9b0d-15d89b4f4d60",
    "metadata": {},
    "outputs": [],
@@ -76,18 +71,16 @@
    "source": [
     "From https://www.kaggle.com/datasets/denizbilginn/google-maps-restaurant-reviews\n",
     "\n",
-    "Data includes reviews of different restaurants on Google Maps. There are 1100 comments in total and pictures of each comment in the data set. The data is labeled according to 4 classes (Taste, Menu, Indoor atmosphere, Outdoor atmosphere) for the artificial intelligence to predict. The dataset has been prepared in a way that can be used in both text processing and image processing fields.\n",
+    "The dataset comprises reviews from various restaurants on Google Maps, encompassing a total of 1100 comments, each accompanied by corresponding pictures. These data entries are categorized into four classes: Taste, Menu, Indoor Atmosphere, and Outdoor Atmosphere. \n",
     "\n",
-    "The dataset contains the following columns: business_name, author_name, text, photo, rating, rating_category\n",
-    "\n",
-    "IMPORTANT: The rating_category column is related to the photo of the review. If we want to use this dataset for NLP, we need to label it ourselves.\n",
+    "Key columns in the dataset include business_name, author_name, text, photo, rating, and rating_category. The rating_category column is linked to the review’s photo. \n",
     "\n",
     "For now we are only examining the text-based review below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "0676fd36-634d-476f-a65e-1aa43a760108",
    "metadata": {},
    "outputs": [
@@ -200,7 +193,7 @@
        "4                menu  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "fc2071e9-ca84-4660-8258-175b5e598f5f",
    "metadata": {},
    "outputs": [
@@ -258,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b94f631b-f8f8-4c78-9df5-ebff4cb7c41d",
    "metadata": {},
    "outputs": [
@@ -274,7 +267,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "33963f23-bacd-45f0-8366-6579cf9a12fb",
    "metadata": {},
    "outputs": [
@@ -322,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "64597daa-1b20-43ef-8496-ac5ed3d352a5",
    "metadata": {},
    "outputs": [
@@ -344,7 +337,7 @@
        "Name: count, Length: 100, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "80b78ca8-ed9d-4b39-b9a1-4623165439c1",
    "metadata": {},
    "outputs": [
@@ -380,7 +373,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "af90a30a-ae0d-4411-b153-84959f624414",
    "metadata": {},
    "outputs": [
@@ -429,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "7b56f7c3-38d0-4810-8c84-0b070f348359",
    "metadata": {},
    "outputs": [
@@ -447,7 +440,7 @@
        "Name: review_length, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "d64b6255-ea7b-4aac-9d87-d1ef50c74d45",
    "metadata": {},
    "outputs": [
@@ -497,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "8b417b37-9f6a-4c21-9a30-0f01bd7bf195",
    "metadata": {},
    "outputs": [
@@ -535,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "1243b3a1-eb18-4ff1-9d8b-5d06e370442f",
    "metadata": {},
    "outputs": [
@@ -571,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "id": "64f5cc5d-e78e-4dc9-b090-afa7e8a6c196",
    "metadata": {},
    "outputs": [
@@ -586,6 +579,7 @@
     }
    ],
    "source": [
+    "unique_authors = review_df['author_name'].unique()\n",
     "unique_authors_count = len(unique_authors)\n",
     "print(f\"Number of unique authors: {unique_authors_count}\")\n",
     "\n",
@@ -611,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "id": "12394b75-8286-4a58-b4e0-c43b47e91aa8",
    "metadata": {},
    "outputs": [
@@ -660,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "a7370fc1-f35a-4a55-aa2f-c424892652b1",
    "metadata": {},
    "outputs": [
@@ -700,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "id": "17795da4-2718-43e7-a02e-99882c3f08ea",
    "metadata": {},
    "outputs": [
@@ -726,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "id": "3945f75c-2263-4737-a27d-bc2105e22eca",
    "metadata": {},
    "outputs": [
@@ -745,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "id": "7d2703c8-6ae0-4180-9cc8-c5f0314e1d9b",
    "metadata": {},
    "outputs": [
@@ -761,6 +755,24 @@
     "ratings = review_df['rating']\n",
     "correlation = np.corrcoef(sentiment_scores_all, ratings)[0, 1]\n",
     "print(f\"Correlation between Sentiment Scores and Ratings: {correlation}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f7f61fe",
+   "metadata": {},
+   "source": [
+    "### Additional Potential Data Issues ## Finish me"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0022ada",
+   "metadata": {},
+   "source": [
+    "As stated before, the ratings_category column, which has the possible values (Taste, Menu, Indoor Atmostphere, and Outdoor Atmosphere) is related to the photo associated with the given data entry (aka the review). As such, using this dataset for NLP requires a preprocessing step of labeling the entries ourselves. \n",
+    "\n",
+    "To do this..."
    ]
   }
  ],
