Add more notes on Potential Dat Issues

--- a/restaurant.ipynb
+++ b/restaurant.ipynb
@@ -770,9 +770,36 @@
    "id": "f0022ada",
    "metadata": {},
    "source": [
+    "#### 1. Preprocessing for NLP\n",
     "As stated before, the ratings_category column, which has the possible values (Taste, Menu, Indoor Atmostphere, and Outdoor Atmosphere) is related to the photo associated with the given data entry (aka the review). As such, using this dataset for NLP requires a preprocessing step of labeling the entries ourselves. \n",
     "\n",
     "To do this..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfeb8b37",
+   "metadata": {},
+   "source": [
+    "#### 2. Missing Data\n",
+    "After examining the dataset, we have confirmed that there are no missing data entries in the entire set. Given that the data we are using is complete, we do not need to make assumptions and impute data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3071bae",
+   "metadata": {},
+   "source": [
+    "#### 3. Data Imbalance \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0c25768",
+   "metadata": {},
+   "source": [
+    "#### 4. Feature Scaling\n",
+    "Not applicable"
    ]
   }
  ],
