EDA for new dataset

--- a/restaurant_new_dataset.ipynb
+++ b/restaurant_new_dataset.ipynb
@@ -526,7 +526,7 @@
     "* First, we dropped reviews with no text, as they would not provide any information for sentiment analysis.\n",
     "* We then calculated the polarity of each review, which ranges from -1 (most negative) to 1 (most positive).\n",
     "* Plotting a histogram and summary statistics, we see that most reviews are moderately positive with a mean polarity of 0.40 and a standard deviation of 0.34. This is consistent with our earlier observation that most ratings are positive (4 or 5 stars).\n",
-    "* The distribution is roughly bell-shaped, but with a density spike at 0 and a few more spikes above 0.5. "
+    "* The distribution is roughly bell-shaped, but with a density spike at 0 and a few more spikes above 0.5. \n"
    ]
   },
   {
@@ -598,7 +598,9 @@
    "source": [
     "<div style=\"background-color:#3F7FBF; color:white; padding:10px\"> \n",
     "\n",
-    "There is a moderate positive correlation between sentiment score and rating, with a correlation coefficient of 0.51. This suggests that reviews with higher ratings tend to have more positive sentiment scores, which is expected."
+    "There is a moderate positive correlation between sentiment score and rating, with a correlation coefficient of 0.51. This suggests that reviews with higher ratings tend to have more positive sentiment scores, which is expected.\n",
+    "\n",
+    "We were worried that meaningful sentiment might not be extracted from short reviews, but the correlation suggests that the sentiment analysis is capturing the sentiment of the reviews decently well."
    ]
   },
   {
