--- a/restaurant_new_dataset_LATEST.ipynb
+++ b/restaurant_new_dataset_LATEST.ipynb
@@ -4353,6 +4353,37 @@
    "source": [
     "### filter by opening hour -- DHATI\n",
     "\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import pytz \n",
+    "\n",
+    "\n",
+    "\n",
+    "def is_open(current_time, hours_str):\n",
+    "    days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "    current_day = days[current_time.weekday()]\n",
+    "    for day_segment in eval(hours_str):\n",
+    "        day, hours = day_segment[0], day_segment[1]\n",
+    "        if day == current_day:\n",
+    "            open_time, close_time = hours.split('-')\n",
+    "            open_time = datetime.strptime(open_time, '%I%p').time()\n",
+    "            close_time = datetime.strptime(close_time, '%I%p').time()\n",
+    "            if open_time <= current_time.time() <= close_time:\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "user_timezone = pytz.timezone('America/New_York') \n",
+    "current_time = datetime.now(user_timezone)\n",
+    "\n",
+    "# Apply the function to filter DataFrame\n",
+    "df['is_open'] = df['hours'].apply(lambda x: is_open(current_time, x) if pd.notna(x) else False)\n",
+    "\n",
+    "\n",
+    "df_open_now = df[df['is_open']]\n",
+    "\n",
+    "\n",
+    "print(df_open_now[['name', 'hours', 'is_open']])\n",
+    "\n",
     "# get current time from user\n",
     "\n",
     "# ! must preprocess opening time well\n",
@@ -4417,7 +4448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
