--- a/restaurant_new_dataset_LATEST.ipynb
+++ b/restaurant_new_dataset_LATEST.ipynb
@@ -4848,7 +4848,7 @@
     "    print(reviews_text)\n",
     "    # truncate at 1024 tokens to avoid exceeding the model's limits\n",
     "    reviews_text = ' '.join(reviews_text.split()[:500])\n",
-    "    summary = summarizer(reviews_text, max_length=50, min_length=30, do_sample=False)\n",
+    "    summary = summarizer(reviews_text, min_length=30, do_sample=False)\n",
     "    return summary[0]['summary_text']"
    ]
   },
