--- a/restaurant_new_dataset_LATEST.ipynb
+++ b/restaurant_new_dataset_LATEST.ipynb
@@ -4835,7 +4835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4921,7 +4921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -5141,10 +5141,10 @@
       "   Summary of 349 reviews: Great Road Kitchen is a gem in the area- food is prepared with care and the staff and service are 5 star! Will return regularly The Point has some of the best services and restaurants!! GRK never disappoints!\n",
       "Website: https://www.greatroadkitchen.com/\n",
       "2. Marcello Sandwich Shop 3.69 / 5 ⭐\n",
-      "   Summary of 216 reviews: Marcello's is the epitome of mouth-watering, small town pizza that leaves me devastated when I see the slices diminish one-by-one from the box. I get the roast beef sandwich on a grilled bun every\n",
+      "   Summary of 216 reviews: Marcello's is the epitome of mouth-watering, small town pizza that leaves me devastated when I see the slices diminish one-by-one from the box. The Roast beef sandwich is one of the best around. The best coleslaw on the East Coast.\n",
       "Website: https://www.marcellossubsandpizza.com/\n",
       "3. Londi's of Salem 3.91 / 5 ⭐\n",
-      "   Summary of 200 reviews: The menu at this place is huge to match the portion sizes. We had a Steak Bomb sub and the name fits - it was the bomb. Small meat lovers calzone and our 22 yo couldn't finish it. The same with\n",
+      "   Summary of 200 reviews: The menu at this place is huge to match the portion sizes. We had a Steak Bomb sub and the name fits - it was the bomb. Small meat lovers calzone and our 22 yo couldn't finish it. The same with my wives Roast Beef Sub took half home.\n",
       "Website: https://www.londisofsalemmenu.com/\n",
       "\n"
      ]
